--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="tr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/leyan-logo.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Leyan İnşaat - Tadilat, restorasyon, dekorasyon ve güçlendirme projelerinizde uzman çözüm ortağınız." />
     <meta name="keywords" content="tadilat, restorasyon, dekorasyon, iç mimari, güçlendirme, inşaat, İstanbul" />
